# rubble

./: .gitignore  CMakeLists.txt  Doxyfile  LICENSE  README.md  mainpage.dox  package.xml
documentation/: classDiagram.dot  flowchart.dot
include/rubble/: GraphHelper.h  GraphUtils.h  MovementTracker.h  RubbleGraph.h
launch/: rubble.launch
resources/: CMakeLists.txt  ContactPlugin.cc  ContactPlugin.hh  rubble.sdf
src/libraries/: GraphHelper.cpp  GraphUtils.cpp  MovementTracker.cpp
src/nodes/: circular_spawn.cpp  example_spawn.cpp  motion_tracker.cpp  random_spawn.cpp  removal_planner.cpp
test/: test_units.cpp
test/unit/: TestGraphFollow.cpp  TestMovementTracker.cpp
