<?xml version="1.0"?>
<package>
	<name>rubble</name>
	<version>0.0.0</version>
	<description>Clearing Rubble</description>

	<!-- One maintainer tag required, multiple allowed, one person per tag --> 
	<!-- Example:  -->
	<!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
	<maintainer email="arprice@gatech.edu">Andrew Price</maintainer>


	<!-- One license tag required, multiple allowed, one license per tag -->
	<!-- Commonly used license strings: -->
	<!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
	<license>BSD</license>


	<!-- Author tags are optional, mutiple are allowed, one per tag -->
	<!-- Authors do not have to be maintianers, but could be -->
	<!-- Example: -->
	<!-- <author email="jane.doe@example.com">Jane Doe</author> -->

	<buildtool_depend>catkin</buildtool_depend>
	
	<build_depend>roscpp</build_depend>
	<build_depend>roslib</build_depend>
	<build_depend>message_generation</build_depend>
	<build_depend>genmsg</build_depend>
	<build_depend>std_msgs</build_depend>
	<build_depend>sensor_msgs</build_depend>
	<build_depend>geometry_msgs</build_depend>
	<build_depend>trajectory_msgs</build_depend>
	<build_depend>control_msgs</build_depend>
	<build_depend>diagnostic_msgs</build_depend>
	<build_depend>actionlib</build_depend>
	<build_depend>actionlib_msgs</build_depend>
	<build_depend>tf</build_depend>
	<build_depend>tf_conversions</build_depend>
	<build_depend>eigen_conversions</build_depend>
    <build_depend>rviz</build_depend>
    <build_depend>class_loader</build_depend>
	<build_depend>joystick_integrator</build_depend>
	<build_depend>visualization_msgs</build_depend>
	<build_depend>interactive_markers</build_depend>
	<build_depend>urdf</build_depend>
	<build_depend>gazebo</build_depend>
	<build_depend>gazebo_msgs</build_depend>
	
	<run_depend>message_runtime</run_depend>
	<run_depend>roslib</run_depend>
	<run_depend>genmsg</run_depend>
	<run_depend>roscpp</run_depend>
	<run_depend>std_msgs</run_depend>
	<run_depend>sensor_msgs</run_depend>
	<run_depend>geometry_msgs</run_depend>
	<run_depend>trajectory_msgs</run_depend>
	<run_depend>control_msgs</run_depend>
	<run_depend>diagnostic_msgs</run_depend>
	<run_depend>actionlib</run_depend>
	<run_depend>actionlib_msgs</run_depend>
	<run_depend>tf</run_depend>
	<run_depend>tf_conversions</run_depend>
	<run_depend>eigen_conversions</run_depend>
    <run_depend>rviz</run_depend>
    <run_depend>class_loader</run_depend>
	<run_depend>joystick_integrator</run_depend>
	<run_depend>visualization_msgs</run_depend>
	<run_depend>interactive_markers</run_depend>
	<run_depend>urdf</run_depend>
	<run_depend>gazebo</run_depend>
	<run_depend>gazebo_msgs</run_depend>

	<!-- The export tag contains other, unspecified, tags -->
	<export>
	</export>
</package>
